--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{ include = "url_shortener" }]
 [tool.poetry.dependencies]
 python = "^3.10"
 django = "^4.2.4"
+django-htmx = "^1.16.0"
 
 
 [build-system]
