--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/direnv,python,django
 # Edit at https://www.toptal.com/developers/gitignore?templates=direnv,python,django
 
+result
+
 ### direnv ###
 .direnv
 .envrc
